--- a/BookNote/深入理解 Java 虚拟机/第7章-虚拟机类加载机制.md
+++ b/BookNote/深入理解 Java 虚拟机/第7章-虚拟机类加载机制.md
@@ -1,4 +1,4 @@
-# 第 7 章虚拟机类加载机制
+# 第 7 章 虚拟机类加载机制
 
 　　代码编译的结果从本地机器码转变为字节码，是存储格式发展的一小步，却是编程语言发展的一大步。
 
@@ -68,1051 +68,464 @@
 
 　　“ 加载 ”（Loading）阶段是整个 “ 类加载 ”（Class Loading）过程中的一个阶段。
 
-　　在加载阶段，Java虚拟机需要完成以下三件事情： 1）通过一个类的全限定名来获取定义此类的二进制字节流。 2）将这个字节流所代表的静态存储结构转化为方法区的运行时数据结构。 3）在内存中生成一个代表这个类的java.lang.Class对象，作为方法区这个类的各种数据的访问入口。
+　　在加载阶段，Java 虚拟机需要完成以下三件事情： 
 
- 
+1. 通过一个类的全限定名来获取定义此类的二进制字节流。 
+2. 将这个字节流所代表的静态存储结构转化为方法区的运行时数据结构。
+3. 在内存中生成一个代表这个类的 java.lang.Class 对象，作为方法区这个类的各种数据的访问入口。
 
- 
+　　《 Java虚拟机规范 》对这三点要求其实并不是特别具体，留给虚拟机实现与 Java 应用的灵活度都是相当大的。
 
-Java虚拟机规范》对这三点要求其实并不是特别具体，留给虚拟机实现与Java应用的灵活度都是相当大的
+　　相对于类加载过程的其他阶段，非数组类型的加载阶段（ 准确地说，是加载阶段中获取类的二进制字节流的动作 ）是开发人员可控性最强的阶段。加载阶段既可以使用 Java 虚拟机里内置的引导类加载器来完成，也可以由用户自定义的类加载器去完成，开发人员通过定义自己的类加载器去控制字节流的获取方式（重写一个类加载器的 findClass() 或 loadClass() 方法），实现根据自己的想法来赋予应用程序获取运行代码的动态性。
 
- 
+　　对于数组类而言，情况就有所不同，数组类本身不通过类加载器创建，它是由 Java 虚拟机直接在内存中动态构造出来的。但数组类与类加载器仍然有很密切的关系，因为数组类的元素类型（Element Type，指的是数组去掉所有维度的类型）最终还是要靠类加载器来完成加载。
 
- 
+　　一个数组类（下面简称为 C ）创建过程遵循以下规则： 
 
-相对于类加载过程的其他阶段，非数组类型的加载阶段（准确地说，是加载阶段中获取类的二进制字节流的动作）是开发人员可控性最强的阶段。加载阶段既可以使用Java虚拟机里内置的引导类加载器来完成，也可以由用户自定义的类加载器去完成，开发人员通过定义自己的类加载器去控制字节流的获取方式（重写一个类加载器的findClass()或loadClass()方法），实现根据自己的想法来赋予应用程序获取运行代码的动态性。
+* 如果数组的组件类型（ Component Type，指的是数组去掉一个维度的类型，注意和前面的元素类型区分开来 ）是引用类型，那就递归采用上面定义的加载过程去加载这个组件类型，数组 C 将被标识在加载该组件类型的类加载器的类名称空间上（一个类型必须与类加载器一起确定唯一性）。
+* 如果数组的组件类型不是引用类型（ 例如 int[]数组的组件类型为 int ），Java 虚拟机将会把数组 C 标记为与引导类加载器关联。
+* 数组类的可访问性与它的组件类型的可访问性一致，如果组件类型不是引用类型，它的数组类的可访问性将默认为 public，可被所有的类和接口访问到。
 
- 
+　　加载阶段结束后，Java 虚拟机外部的二进制字节流就按照虚拟机所设定的格式存储在方法区之中了，方法区中的数据存储格式完全由虚拟机实现自行定义，《 Java 虚拟机规范 》未规定此区域的具体数据结构。
 
- 
+　　类型数据妥善安置在方法区之后，会在 Java 堆内存中实例化一个 java.lang.Class 类的对象，这个对象将作为程序访问方法区中的类型数据的外部接口。 
 
-对于数组类而言，情况就有所不同，数组类本身不通过类加载器创建，它是由Java虚拟机直接在内存中动态构造出来的。但数组类与类加载器仍然有很密切的关系，因为数组类的元素类型（Element Type，指的是数组去掉所有维度的类型）最终还是要靠类加载器来完成加载
-
- 
-
- 
-
-一个数组类（下面简称为C）创建过程遵循以下规则： ·如果数组的组件类型（Component Type，指的是数组去掉一个维度的类型，注意和前面的元素类型区分开来）是引用类型，那就递归采用本节中定义的加载
-
- 
-
- 
-
-过程去加载这个组件类型，数组C将被标识在加载该组件类型的类加载器的类名称空间上（这点很重要，在7.4节会介绍，一个类型必须与类加载器一起确定唯一性）。
-
- 
-
- 
-
-如果数组的组件类型不是引用类型（例如int[]数组的组件类型为int），Java虚拟机将会把数组C标记为与引导类加载器关联。
-
- 
-
- 
-
-数组类的可访问性与它的组件类型的可访问性一致，如果组件类型不是引用类型，它的数组类的可访问性将默认为public，可被所有的类和接口访问到。
-
- 
-
- 
-
-加载阶段结束后，Java虚拟机外部的二进制字节流就按照虚拟机所设定的格式存储在方法区之中了，方法区中的数据存储格式完全由虚拟机实现自行定义，《Java虚拟机规范》未规定此区域的具体数据结构。类型数据妥善安置在方法区之后，会在Java堆内存中实例化一个java.lang.Class类的对象，这个对象将作为程序访问方法区中的类型数据的外部接口。 加载阶段与连接阶段的部分动作（如一部分字节码文件格式验证动作）是交叉进行的，加载阶段尚未完成，连接阶段可能已经开始，但这些夹在加载阶段之中进行的动作，仍然属于连接阶段的一部分，这两个阶段的开始时间仍然保持着固定的先后顺序。
-
-微信读书
+　　加载阶段与连接阶段的部分动作（ 如一部分字节码文件格式验证动作 ）是交叉进行的，加载阶段尚未完成，连接阶段可能已经开始，但这些夹在加载阶段之中进行的动作，仍然属于连接阶段的一部分，这两个阶段的开始时间仍然保持着固定的先后顺序。
 
 ### 7.3.2 验证
 
-深入理解Java虚拟机：JVM高级特性与最佳实践（第3版）
+　　验证是连接阶段的第一步，这一阶段的**目的**是确保 Class 文件的字节流中包含的信息符合《 Java 虚拟机规范 》的全部约束要求，保证这些信息被当作代码运行后不会危害虚拟机自身的安全。
 
-周志明
+　　验证字节码是 Java 虚拟机保护自身的一项必要措施。
 
-35个笔记
+　　验证阶段是非常重要的，这个阶段是否严谨，直接决定了 Java 虚拟机是否能承受恶意代码的攻击，从代码量和耗费的执行性能的角度上讲，验证阶段的工作量在虚拟机的类加载过程中占了相当大的比重。
 
-7.3 类加载的过程
+　　验证阶段大致上会完成下面四个阶段的检验动作：文件格式验证、元数据验证、字节码验证和符号引用验证。
 
- 
+#### 7.3.2.1 文件格式验证
 
-7.3.2 验证
+　　第一阶段要验证字节流是否符合 Class 文件格式的规范，并且能被当前版本的虚拟机处理。
 
- 
+　　这一阶段可能包括下面这些验证点： 
 
- 
+* 是否以魔数 0xCAFEBABE 开头。 
+* 主、次版本号是否在当前 Java 虚拟机接受范围之内。 
+* 常量池的常量中是否有不被支持的常量类型（检查常量 tag 标志）。 
+* 指向常量的各种索引值中是否有指向不存在的常量或不符合类型的常量。 
+* CONSTANT_Utf8_info 型的常量中是否有不符合 UTF-8 编码的数据。 
+* Class 文件中各个部分及文件本身是否有被删除的或附加的其他信息。 
+* ……
 
-验证是连接阶段的第一步，这一阶段的目的是确保Class文件的字节流中包含的信息符合《Java虚拟机规范》的全部约束要求，保证这些信息被当作代码运行后不会危害虚拟机自身的安全。
+　　实际上第一阶段的验证点还远不止这些，上面所列的只是从 HotSpot 虚拟机源码￼中摘抄的一小部分内容。
 
- 
+　　该验证阶段的主要目的是保证输入的字节流能正确地解析并存储于方法区之内，格式上符合描述一个 Java 类型信息的要求。
 
- 
+　　这阶段的验证是基于二进制字节流进行的，只有通过了这个阶段的验证之后，这段字节流才被允许进入 Java 虚拟机内存的方法区中进行存储，所以后面的三个验证阶段全部是基于方法区的存储结构上进行的，不会再直接读取、操作字节流了。
 
-验证字节码是Java虚拟机保护自身的一项必要措施。
+#### 7.3.2.2 元数据验证
 
- 
+　　第二阶段是对字节码描述的信息进行语义分析，以保证其描述的信息符合《 Java 语言规范 》的要求。
 
- 
+　　这个阶段可能包括的验证点如下： 
 
-验证阶段是非常重要的，这个阶段是否严谨，直接决定了Java虚拟机是否能承受恶意代码的攻击，从代码量和耗费的执行性能的角度上讲，验证阶段的工作量在虚拟机的类加载过程中占了相当大的比重。
+* 这个类是否有父类（除了 java.lang.Object 之外，所有的类都应当有父类）。 
+* 这个类的父类是否继承了不允许被继承的类（被 final 修饰的类）。 
+* 如果这个类不是抽象类，是否实现了其父类或接口之中要求实现的所有方法。 
+* 类中的字段、方法是否与父类产生矛盾（例如覆盖了父类的 final 字段，或者出现不符合规则的方法重载，例如方法参数都一致，但返回值类型却不同等）。
+* ……
 
- 
+　　第二阶段的主要目的是对类的元数据信息进行语义校验，保证不存在与《 Java 语言规范 》定义相悖的元数据信息。
 
- 
+#### 7.3.2.3 字节码验证
 
-验证阶段大致上会完成下面四个阶段的检验动作：文件格式验证、元数据验证、字节码验证和符号引用验证。
+　　第三阶段是整个验证过程中最复杂的一个阶段，主要目的是通过数据流分析和控制流分析，确定程序语义是合法的、符合逻辑的。
 
- 
+　　第二阶段对元数据信息中的数据类型校验完毕以后，这阶段就要对类的方法体（ Class 文件中的 Code 属性 ）进行校验分析，保证被校验类的方法在运行时不会做出危害虚拟机安全的行为，例如： 
 
- 
+* 保证任意时刻操作数栈的数据类型与指令代码序列都能配合工作，例如不会出现类似于 “ 在操作栈放置了一个 int 类型的数据，使用时却按 long 类型来加载入本地变量表中 ” 这样的情况。 
+* 保证任何跳转指令都不会跳转到方法体以外的字节码指令上。 
+* 保证方法体中的类型转换总是有效的，例如可以把一个子类对象赋值给父类数据类型，这是安全的，但是把父类对象赋值给子类数据类型，甚至把对象赋值给与它毫无继承关系、完全不相干的一个数据类型，则是危险和不合法的。 
+* ……
 
-1.文件格式验证
+　　如果一个方法体通过了字节码验证，也仍然不能保证它一定就是安全的。即使字节码验证阶段中进行了再大量、再严密的检查，也依然不能保证这一点。这里涉及了离散数学中一个很著名的问题—— “ 停机问题 ”（Halting Problem）￼，即不能通过程序准确地检查出程序是否能在有限的时间之内结束运行。在讨论字节码校验的上下文语境里，通俗一点的解释是通过程序去校验程序逻辑是无法做到绝对准确的，不可能用程序来准确判定一段程序是否存在 Bug。
 
- 
+　　由于数据流分析和控制流分析的高度复杂性，Java 虚拟机的设计团队为了避免过多的执行时间消耗在字节码验证阶段中，在 JDK 6 之后的 Javac 编译器和 Java 虚拟机里进行了一项联合优化，把尽可能多的校验辅助措施挪到 Javac 编译器里进行。
 
- 
+　　优化的具体做法是给方法体 Code 属性的属性表中新增加了一项名为 “ StackMapTable ” 的新属性，这项属性描述了方法体所有的基本块（ Basic Block ，指按照控制流拆分的代码块）开始时本地变量表和操作栈应有的状态，在字节码验证期间，Java 虚拟机就不需要根据程序推导这些状态的合法性，只需要检查 StackMapTable 属性中的记录是否合法即可。这样就将字节码验证的类型推导转变为类型检查，从而节省了大量校验时间。
 
-第一阶段要验证字节流是否符合Class文件格式的规范，并且能被当前版本的虚拟机处理。这一阶段可能包括下面这些验证点： ·是否以魔数0xCAFEBABE开头。 ·主、次版本号是否在当前Java虚拟机接受范围之内。 ·常量池的常量中是否有不被支持的常量类型（检查常量tag标志）。 ·指向常量的各种索引值中是否有指向不存在的常量或不符合类型的常量。 ·CONSTANT_Utf8_info型的常量中是否有不符合UTF-8编码的数据。 ·Class文件中各个部分及文件本身是否有被删除的或附加的其他信息。 ·……
+　　JDK 6 的 HotSpot 虚拟机中提供了-XX：-UseSplitVerifier 选项来关闭掉这项优化，或者使用参数 -XX：+FailOverToOldVerifier 要求在类型校验失败的时候退回到旧的类型推导方式进行校验。
 
- 
+　　而到了 JDK 7 之后，尽管虚拟机中仍然保留着类型推导验证器的代码，但是对于主版本号大于 50（对应 JDK 6 ）的 Class 文件，使用类型检查来完成数据流分析校验则是唯一的选择，不允许再退回到原来的类型推导的校验方式。
 
- 
+#### 7.3.2.4 符号引用验证
 
-实际上第一阶段的验证点还远不止这些，上面所列的只是从HotSpot虚拟机源码￼中摘抄的一小部分内
+　　最后一个阶段的校验行为发生在虚拟机将符号引用转化为直接引用的时候，这个转化动作将在连接的第三阶段 —— 解析阶段中发生。
 
- 
+　　符号引用验证可以看作是对类自身以外（ 常量池中的各种符号引用 ）的各类信息进行匹配性校验，通俗来说就是，该类是否缺少或者被禁止访问它依赖的某些外部类、方法、字段等资源。
 
- 
+　　本阶段通常需要校验下列内容：
 
-容
+* 符号引用中通过字符串描述的全限定名是否能找到对应的类。
+* 在指定类中是否存在符合方法的字段描述符及简单名称所描述的方法和字段。
+* 符号引用中的类、字段、方法的可访问性（private、protected、public、< package >）是否可被当前类访问。
+* ……
 
- 
+　　符号引用验证的主要目的是确保解析行为能正常执行，如果无法通过符号引用验证，Java 虚拟机将会抛出一个 java.lang.IncompatibleClassChangeError 的子类异常，典型的如：java.lang.IllegalAccessError、java.lang.NoSuchFieldError、java.lang.NoSuchMethodError 等。
 
- 
-
-该验证阶段的主要目的是保证输入的字节流能正确地解析并存储于方法区之内，格式上符合描述一个Java类型信息的要求
-
- 
-
- 
-
-这阶段的验证是基于二进制字节流进行的，只有通过了这个阶段的验证之后，这段字节流才被允许进入Java虚拟机内存的方法区中进行存储，所以后面的三个验证阶段全部是基于方法区的存储结构上进行的，不会再直接读取、操作字节流了。
-
- 
-
- 
-
-2.元数据验证
-
- 
-
- 
-
-第二阶段是对字节码描述的信息进行语义分析，以保证其描述的信息符合《Java语言规范》的要求，这个阶段可能包括的验证点如下： ·这个类是否有父类（除了java.lang.Object之外，所有的类都应当有父类）。 ·这个类的父类是否继承了不允许被继承的类（被final修饰的类）。 ·如果这个类不是抽象类，是否实现了其父类或接口之中要求实现的所有方法。 ·类中的字段、方法是否与父类产生矛盾（例如覆
-
- 
-
- 
-
-盖了父类的final字段，或者出现不符合规则的方法重载，例如方法参数都一致，但返回值类型却不同等）。
-
- 
-
- 
-
-·……
-
- 
-
- 
-
-第二阶段的主要目的是对类的元数据信息进行语义校验，保证不存在与《Java语言规范》定义相悖的元数据信息。
-
- 
-
- 
-
-3.字节码验证
-
- 
-
- 
-
-第三阶段是整个验证过程中最复杂的一个阶段，主要目的是通过数据流分析和控制流分析，确定程序语义是合法的、符合逻辑的
-
- 
-
- 
-
-第二阶段对元数据信息中的数据类型校验完毕以后，这阶段就要对类的方法体（Class文件中的Code属性）进行校验分析，保证被校验类的方法在运行时不会做出危害虚拟机安全的行为，例如： ·保证任意时刻操作数栈的数据类型与指令代码序列都能配合工作，例如不会出现类似于“在操作栈放置了一个int类型的数据，使用时却按long类型来加载入本地变量表中”这样的情况。 ·保证任何跳转指令都不会跳转到方法体以外的字节码指令上。 ·保证方法体中的类型转换总是有效的，例如可以把一个子类对象赋值给父类数据类型，这是安全的，但是把父类对象赋值给子类数据类型，甚至把对象赋值给与它毫无继承关系、完全不相干的一个数据类型，则是危险和不合法的。 ·……
-
- 
-
- 
-
-如果一个方法体通过了字节码验证，也仍然不能保证它一定就是安全的。即使字节码验证阶段中进行了再大量、再严密的检查，也依然不能保证这一点。这里涉及了离散数学中一个很著名的问题——“停机问题”（Halting Problem）￼，即不能通过程序准确地检查出程序是否能在有限的时间之内结束运行。在我们讨论字节码校验的上下文语境里，通俗一点的解释是通过程序去校验程序逻辑是无法做到绝对准确的，不可能用程序来准确判定一段程序是否存在Bug。
-
- 
-
- 
-
-由于数据流分析和控制流分析的高度复杂性，Java虚拟机的设计团队为了避免过多的执行时间消耗在字节码验证阶段中，在JDK 6之后的Javac编译器和Java虚拟机里进行了一项联合优化，把尽可能多的校验辅助措施挪到Javac编译器里进行。
-
- 
-
- 
-
-具体做法是给方法体
-
- 
-
- 
-
-Code属性的属性表中新增加了一项名为“StackMapTable”的新属性，这项属性描述了方法体所有的基本块（Basic Block，指按照控制流拆分的代码块）开始时本地变量表和操作栈应有的状态，在字节码验证期间，Java虚拟机就不需要根据程序推导这些状态的合法性，只需要检查StackMapTable属性中的记录是否合法即可
-
- 
-
- 
-
-这样就将字节码验证的类型推导转变为类型检查，从而节省了大量校验时间
-
- 
-
- 
-
-JDK 6的HotSpot虚拟机中提供了-
-
- 
-
- 
-
-XX：-UseSplitVerifier选项来关闭掉这项优化，或者使用参数-XX：+FailOverToOldVerifier要求在类型校验失败的时候退回到旧的类型推导方式进行校验
-
- 
-
- 
-
-而到了JDK 7之后，尽管虚拟机中仍然保留着类型推导验证器的代码，但是对于主版本号大于50（对应JDK 6）的Class文件，使用类型检查来完成数据流分析校验则是唯一的选择，不允许再退回到原来的类型推导的校验方式。
-
- 
-
- 
-
-4.符号引用验证
-
- 
-
- 
-
-最后一个阶段的校验行为发生在虚拟机将符号引用转化为直接引用[插图]的时候，这个转化动作将在连接的第三阶段——解析阶段中发生
-
- 
-
- 
-
-符号引用验证可以看作是对类自身以外（常量池中的各种符号引用）的各类信息进行匹配性校
-
- 
-
- 
-
-验，通俗来说就是，该类是否缺少或者被禁止访问它依赖的某些外部类、方法、字段等资源
-
- 
-
- 
-
-本阶段通常需要校验下列内容：·符号引用中通过字符串描述的全限定名是否能找到对应的类。·在指定类中是否存在符合方法的字段描述符及简单名称所描述的方法和字段。·符号引用中的类、字段、方法的可访问性（private、protected、public、）是否可被当前类访问。·……
-
- 
-
- 
-
-符号引用验证的主要目的是确保解析行为能正常执行，如果无法通过符号引用验证，Java虚拟机将会抛出一个java.lang.IncompatibleClassChange
-
- 
-
- 
-
-rror的子类异常，典型的如：java.lang.IllegalAccessError、java.lang.NoSuchFieldError、java.lang.NoSuchMethodError等。
-
- 
-
- 
-
-验证阶段对于虚拟机的类加载机制来说，是一个非常重要的、但却不是必须要执行的阶段，因为验证阶段只有通过或者不通过的差别，只要通过了验证，其后就对程序运行期没有任何影响了。如果程序运行的全部代码（包括自己编写的、第三方包中的、从外部加载的、动态生成的等所有代码）都已经被反复使用和验证过，在生产环境的实施阶段就可以考虑使用-Xverify：none参数来关闭大部分的类验证措施，以缩短虚拟机类加载的时间。
-
-微信读书
+　　验证阶段对于虚拟机的类加载机制来说，是一个非常重要的、但却不是必须要执行的阶段，因为验证阶段只有通过或者不通过的差别，只要通过了验证，其后就对程序运行期没有任何影响了。如果程序运行的全部代码（包括自己编写的、第三方包中的、从外部加载的、动态生成的等所有代码）都已经被反复使用和验证过，在生产环境的实施阶段就可以考虑使用 -Xverify：none 参数来关闭大部分的类验证措施，以缩短虚拟机类加载的时间。
 
 ### 7.3.3 准备
 
-深入理解Java虚拟机：JVM高级特性与最佳实践（第3版）
+　　准备阶段是正式为类中定义的变量（即静态变量，被 static 修饰的变量）分配内存并设置类变量初始值的阶段。
 
-周志明
+　　这时候进行内存分配的仅包括类变量，而不包括实例变量，实例变量将会在对象实例化时随着对象一起分配在 Java 堆中。其次是这里所说的初始值 “ 通常情况 ” 下是数据类型的零值。
 
-44个笔记
+　　下表列出了 Java 中所有基本数据类型的零值：
 
-7.3 类加载的过程
+![](image/基本数据类型的零值.jpeg)
 
- 
-
-7.3.3 准备
-
- 
-
- 
-
-准备阶段是正式为类中定义的变量（即静态变量，被static修饰的变量）分配内存并设置类变量初始值的阶段
-
- 
-
- 
-
-这时候进行内存分配的仅包括类变量，而不包括实例变量，实例变量将会在对
-
- 
-
- 
-
-象实例化时随着对象一起分配在Java堆中。其次是这里所说的初始值“通常情况”下是数据类型的零值
-
- 
-
- 
-
-表7-1列出了Java中所有基本数据类型的零值。
-
- 
-
- 
-
-如果类字段的字段属性表中存在ConstantValue属性，那在准备阶段变量值就会被初始化为ConstantValue属性所指定的初始值
-
- 
-
- 
+　　如果类字段的字段属性表中存在 ConstantValue 属性，那在准备阶段变量值就会被初始化为 ConstantValue 属性所指定的初始值。 
 
 ### 7.3.4 解析
 
- 
+　　解析阶段是 Java 虚拟机将常量池内的符号引用替换为直接引用的过程。
 
- 
+　　**符号引用**（ Symbolic References ）：符号引用以一组符号来描述所引用的目标，符号可以是任何形式的字面量，只要使用时能无歧义地定位到目标即可。
 
-解析阶段是Java虚拟机将常量池内的符号引用替换为直接引用的过程
+　　符号引用与虚拟机实现的内存布局无关，引用的目标并不一定是已经加载到虚拟机内存当中的内容。各种虚拟机实现的内存布局可以各不相同，但是它们能接受的符号引用必须都是一致的，因为符号引用的字面量形式明确定义在《 Java 虚拟机规范 》的 Class 文件格式中。
 
- 
+　　**直接引用**（Direct References）：直接引用是可以直接指向目标的指针、相对偏移量或者是一个能间接定位到目标的句柄。
 
- 
+　　直接引用是和虚拟机实现的内存布局直接相关的，同一个符号引用在不同虚拟机实例上翻译出来的直接引用一般不会相同。如果有了直接引用，那引用的目标必定已经在虚拟机的内存中存在。
 
-符号引用（Symbolic References）：符号引用以一组符号来描述所引用的目标，符号可以是任何形式的字面量，只要使用时能无歧义地定位到目标即可。符号引用与虚拟机实现的内存布局无关，引用的目标并不一定是已经加载到虚拟机内存当中的内容。各种虚拟机实现的内存布局可以各不相同，但是它们能接受的符号引用必须都是一致的，因为符号引用的字面量形式明确定义在《Java虚拟机规范》的Class文件格式中。
+　　《 Java 虚拟机规范 》之中并未规定解析阶段发生的具体时间，只要求了在执行 ane-warray、checkcast、getfield、getstatic、instanceof、invokedynamic、invokeinterface、invokespecial、invokestatic、invokevirtual、ldc、ldc_w、ldc2_w、multianewarray、new、putfield 和 putstatic 这 17 个用于操作符号引用的字节码指令之前，先对它们所使用的符号引用进行解析。
 
- 
+　　所以虚拟机实现可以根据需要来自行判断，到底是在类被加载器加载时就对常量池中的符号引用进行解析，还是等到一个符号引用将要被使用前才去解析它。
 
- 
+　　类似地，对方法或者字段的访问，也会在解析阶段中对它们的可访问性（ public、protected、private、< package >）进行检查。
 
-直接引用（Direct
+　　对同一个符号引用进行多次解析请求是很常见的事情，除 invokedynamic 指令以外，虚拟机实现可以对第一次解析的结果进行缓存，譬如在运行时直接引用常量池中的记录，并把常量标识为已解析状态，从而避免解析动作重复进行。
 
- 
+　　无论是否真正执行了多次解析动作，Java 虚拟机都需要保证的是在同一个实体中，如果一个符号引用之前已经被成功解析过，那么后续的引用解析请求就应当一直能够成功；同样地，如果第一次解析失败了，其他指令对这个符号的解析请求也应该收到相同的异常，哪怕这个请求的符号在后来已成功加载进 Java 虚拟机内存之中。
 
- 
+　　当碰到某个前面已经由 invokedynamic 指令触发过解析的符号引用时，并不意味着这个解析结果对于其他 invokedynamic 指令也同样生效。因为 invokedynamic 指令的目的本来就是用于动态语言支持，它对应的引用称为 “ 动态调用点限定符（Dynamically-Computed Call Site Specifier）”，这里 “ 动态 ” 的含义是指必须等到程序实际运行到这条指令时，解析动作才能进行。相对地，其余可触发解析的指令都是 “ 静态 ” 的，可以在刚刚完成加载阶段，还没有开始执行代码时就提前进行解析。
 
-References）：直接引用是可以直接指向目标的指针、相对偏移量或者是一个能间接定位到目标的句柄。直接引用是和虚拟机实现的内存布局直接相关的，同一个符号引用在不同虚拟机实例上翻译出来的直接引用一般不会相同。如果有了直接引用，那引用的目标必定已经在虚拟机的内存中存在。
+　　解析动作主要针对类或接口、字段、类方法、接口方法、方法类型、方法句柄和调用点限定符这 7 类符号引用进行，分别对应于常量池的 CONSTANT_Class_info、CON-STANT_Fieldref_info、CONSTANT_Methodref_info、CONSTANT_InterfaceMethodref_info、CONSTANT_MethodType_info、CONSTANT_MethodHandle_info、CONSTANT_Dynamic_info 和 CONSTANT_InvokeDynamic_info 8 种常量类型。后4种，它们都和动态语言支持密切相关。
 
- 
+#### 7.3.4.1 类或接口的解析
 
- 
+　　假设当前代码所处的类为 D，如果要把一个从未解析过的符号引用 N 解析为一个类或接口 C 的直接引用，那虚拟机完成整个解析的过程需要包括以下3个步骤：
 
-《Java虚拟机规范》之中并未规定解析阶段发生的具体时间，只要求了在执行ane-warray、checkcast、getfield、getstatic、instanceof、invokedynamic、invokeinterface、invoke-special、invokestatic、invokevirtual、ldc、ldc_w、ldc2_w、multianewarray、new、putfield和putstatic这17个用于操作符号引用的字节码指令之前，先对它们所使用的符
+1. 如果 C 不是一个数组类型，那虚拟机将会把代表 N 的全限定名传递给 D 的类加载器去加载这个类 C 。在加载过程中，由于元数据验证、字节码验证的需要，又可能触发其他相关类的加载动作，例如加载这个类的父类或实现的接口。一旦这个加载过程出现了任何异常，解析过程就将宣告失败。
+2. 如果 C 是一个数组类型，并且数组的元素类型为对象，也就是 N 的描述符会是类似 “ [Ljava/lang/Integer ” 的形式，那将会按照第一点的规则加载数组元素类型。如果 N 的描述符如前面所假设的形式，需要加载的元素类型就是 “java.lang.Integer” ，接着由虚拟机生成一个代表该数组维度和元素的数组对象。
+3. 如果上面两步没有出现任何异常，那么 C 在虚拟机中实际上已经成为一个有效的类或接口了，但在解析完成前还要进行符号引用验证，确认 D 是否具备对 C 的访问权限。如果发现不具备访问权限，将抛出 java.lang.IllegalAccessError 异常。
 
- 
+　　针对上面第 3 点访问权限验证，在 JDK 9 引入了模块化以后，一个 public 类型也不再意味着程序任何位置都有它的访问权限，还必须检查模块间的访问权限。
 
- 
+　　如果我们说一个 D 拥有 C 的访问权限，那就意味着以下 3 条规则中至少有其中一条成立： 
 
-号引用进行解析
+* 被访问类 C 是 public 的，并且与访问类 D 处于同一个模块。 
+* 被访问类 C 是 public 的，不与访问类 D 处于同一个模块，但是被访问类 C 的模块允许被访问类 D 的模块进行访问。 
+* 被访问类 C 不是 public 的，但是它与访问类 D 处于同一个包中。
 
- 
+#### 7.3.4.2 字段解析
 
- 
+　　要解析一个未被解析过的字段符号引用，首先将会对字段表内 class_index￼ 项中索引的 CONSTANT_Class_info 符号引用进行解析，也就是字段所属的类或接口的符号引用。
 
-所以虚拟机实现可以根据需要来自行判断，到底是在类被加载器加载时就对常量池中的符号引用进行解析，还是等到一个符号引用将要被使用前才去解析它。
+　　如果在解析这个类或接口符号引用的过程中出现了任何异常，都会导致字段符号引用解析的失败。如果解析成功完成，那把这个字段所属的类或接口用 C 表示，《 Java 虚拟机规范 》要求按照如下步骤对 C 进行后续字段的搜索：
 
- 
+1. 如果 C 本身就包含了简单名称和字段描述符都与目标相匹配的字段，则返回这个字段的直接引用，查找结束。 
+2. 否则，如果在 C 中实现了接口，将会按照继承关系从下往上递归搜索各个接口和它的父接口，如果接口中包含了简单名称和字段描述符都与目标相匹配的字段，则返回这个字段的直接引用，查找结束。 
+3. 否则，如果 C 不是 java.lang.Object 的话，将会按照继承关系从下往上递归搜索其父类，如果在父类中包含了简单名称和字段描述符都与目标相匹配的字段，则返回这个字段的直接引用，查找结束。 
+4. 否则，查找失败，抛出 java.lang.NoSuchFieldError 异常。
 
- 
+　　如果查找过程成功返回了引用，将会对这个字段进行权限验证，如果发现不具备对字段的访问权限，将抛出 java.lang.IllegalAccessError 异常。
 
-类似地，对方法或者字段的访问，也会在解析阶段中对它们的可访问性（public、protected、private、）进行检查
+　　以上解析规则能够确保 Java 虚拟机获得字段唯一的解析结果，但在实际情况中，Javac 编译器往往会采取比上述规范更加严格一些的约束，譬如有一个同名字段同时出现在某个类的接口和父类当中，或者同时在自己或父类的多个接口中出现，按照解析规则仍是可以确定唯一的访问字段，但 Javac 编译器就可能直接拒绝其编译为 Class 文件。
 
- 
+#### 7.3.4.3 方法解析
 
- 
+　　方法解析的第一个步骤与字段解析一样，也是需要先解析出方法表的 class_index￼ 项中索引的方法所属的类或接口的符号引用，如果解析成功，那么我们依然用 C 表示这个类，接下来虚拟机将会按照如下步骤进行后续的方法搜索：
 
-对同一个符号引用进行多次解析请求是很常见的事情，除invokedynamic指令以外，虚拟机实现可以对第一次解析的结果进行缓存，譬如在运行时直接引用常量池中的记录，并把常量标识为已解析状态，从而避免解析动作重复进行。
+1. 由于 Class 文件格式中类的方法和接口的方法符号引用的常量类型定义是分开的，如果在类的方法表中发现 class_index 中索引的 C 是个接口的话，那就直接抛出 java.lang.IncompatibleClassChangeError 异常。 
+2. 如果通过了第一步，在类 C 中查找是否有简单名称和描述符都与目标相匹配的方法，如果有则返回这个方法的直接引用，查找结束。 
+3. 否则，在类 C 的父类中递归查找是否有简单名称和描述符都与目标相匹配的方法，如果有则返回这个方法的直接引用，查找结束。 
+4. 否则，在类 C 实现的接口列表及它们的父接口之中递归查找是否有简单名称和描述符都与目标相匹配的方法，如果存在匹配的方法，说明类 C 是一个抽象类，这时候查找结束，抛出 java.lang.AbstractMethodError 异常。 
+5. 否则，宣告方法查找失败，抛出java.lang.NoSuchMethodError 。
 
- 
+　　最后，如果查找过程成功返回了直接引用，将会对这个方法进行权限验证，如果发现不具备对此方法的访问权限，将抛出 java.lang.IllegalAccessError 异常。
 
- 
+#### 7.3.4.4 接口方法解析
 
-无论是否真正
+　　接口方法也是需要先解析出接口方法表的 class_index￼ 项中索引的方法所属的类或接口的符号引用，如果解析成功，依然用 C 表示这个接口，接下来虚拟机将会按照如下步骤进行后续的接口方法搜索： 
 
- 
+1. 与类的方法解析相反，如果在接口方法表中发现 class_index 中的索引 C 是个类而不是接口，那么就直接抛出 java.lang.IncompatibleClassChangeError 异常。 
+2. 否则，在接口 C 中查找是否有简单名称和描述符都与目标相匹配的方法，如果有则返回这个方法的直接引用，查找结束。 
+3. 否则，在接口 C 的父接口中递归查找，直到 java.lang.Object 类（接口方法的查找范围也会包括 Object 类中的方法）为止，看是否有简单名称和描述符都与目标相匹配的方法，如果有则返回这个方法的直接引用，查找结束。 
+4. 对于规则 3，由于 Java 的接口允许多重继承，如果 C 的不同父接口中存有多个简单名称和描述符都与目标相匹配的方法，那将会从这多个方法中返回其中一个并结束查找，《 Java 虚拟机规范 》中并没有进一步规则约束应该返回哪一个接口方法。但与之前字段查找类似地，不同发行商实现的 Javac 编译器有可能会按照更严格的约束拒绝编译这种代码来避免不确定性。 
+5. 否则，宣告方法查找失败，抛出 java.lang.NoSuchMethodError 异常。
 
- 
-
-执行了多次解析动作，Java虚拟机都需要保证的是在同一个实体中，如果一个符号引用之前已经被成功解析过，那么后续的引用解析请求就应当一直能够成功；同样地，如果第一次解析失败了，其他指令对这个符号的解析请求也应该收到相同的异常，哪怕这个请求的符号在后来已成功加载进Java虚拟机内存之中。
-
- 
-
- 
-
-当碰到某个前面已经由invokedynamic指令触发过解析的符号引用时，并不意味着这个解析结果对于其他invokedynamic指令也同样生效。因为invokedynamic指令的目的本来就是用于动态语言支持[插图]，它对应的引用称为“动态调用点限定符（Dynamically-Computed Call
-
- 
-
- 
-
-Site Specifier）”，这里“动态”的含义是指必须等到程序实际运行到这条指令时，解析动作才能进行。相对地，其余可触发解析的指令都是“静态”的，可以在刚刚完成加载阶段，还没有开始执行代码时就提前进行解析。
-
- 
-
- 
-
-解析动作主要针对类或接口、字段、类方法、接口方法、方法类型、方法句柄和调用点限定符这7类符号引用进行，分别对应于常量池的CONSTANT_Class_info、CON-STANT_Fieldref_info、CONSTANT_Methodref_info、CONSTANT_InterfaceMethodref_info、CONSTANT_MethodType_info、CONSTANT_MethodHandle_info、CONSTANT_Dyna-mic_info和CONSTANT_InvokeDynamic_info 8种常
-
- 
-
- 
-
-量类型
-
- 
-
- 
-
-后4种，它们都和动态语言支持密切相关，由于Java语言本身是一门静态类型语言，在没有讲解清楚invokedynamic指令的语意之前，我们很难将它们直观地和现在的Java语言语法对应上，因此笔者将延后到第8章介绍动态语言调用时一起分析讲解。
-
- 
-
- 
-
-1.类或接口的解析
-
- 
-
- 
-
-假设当前代码所处的类为D，如果要把一个从未解析过的符号引用N解析为一个类或接口C的直接引用，那虚拟机完成整个解析的过程需要包括以下3个步骤：1）如果C不是一个数组类型，那虚拟机将会把代表N的全限定名传递给D的类加载器去加载这个类C。在加载过程中，由于元数据验证、字节码验证的
-
- 
-
- 
-
-需要，又可能触发其他相关类的加载动作，例如加载这个类的父类或实现的接口。一旦这个加载过程出现了任何异常，解析过程就将宣告失败。2）如果C是一个数组类型，并且数组的元素类型为对象，也就是N的描述符会是类似“[Ljava/lang/Integer”的形式，那将会按照第一点的规则加载数组元素类型。如果N的描述符如前面所假设的形式，需要加载的元素类型就是“java.lang.Integer”，接着由虚拟机生成一个代表该数组维度和元素的数组对象。3）如果上面两步没有出现任何异常，那么C在虚拟机中实际上已经成为一个有效的类或接口了，但在解析完成前还要进行符号引用验证，确认D是否具备对C的访问权限。如果发现不具备
-
- 
-
- 
-
-需要，又可能触发其他相关类的加载动作，例如加载这个类的父类或实现的接口。一旦这个加载过程出现了任何异常，解析过程就将宣告失败。 2）如果C是一个数组类型，并且数组的元素类型为对象，也就是N的描述符会是类似“[Ljava/lang/Integer”的形式，那将会按照第一点的规则加载数组元素类型。如果N的描述符如前面所假设的形式，需要加载的元素类型就是“java.lang.Integer”，接着由虚拟机生成一个代表该数组维度和元素的数组对象。 3）如果上面两步没有出现任何异常，那么C在虚拟机中实际上已经成为一个有效的类或接口了，但在解析完成前还要进行符号引用验证，确认D是否具备对C的访问权限。如果发现不具备访问权限，将抛出java.lang.IllegalAccessError异常。
-
- 
-
- 
-
-针对上面第3点访问权限验证，在JDK 9引入了模块化以后，一个public类型也不再意味着程序任何位置都有它的访问权限，我们还必须检查模块间的访问权限。
-
- 
-
- 
-
-如果我们说一个D拥有C的访问权限，那就意味着以下3条规则中至少有其中一条成立： ·被访问类C是public的，并且与访问类D处于同一个模块。 ·被访问类C是public的，不与访问类D处于同一个模块，但是被访问类C的模块允许被访问类D的模块进行访问。 ·被访问类C不是public的，但是它与访问类D处于同一个包中。
-
- 
-
- 
-
-2.字段解析
-
- 
-
- 
-
-要解析一个未被解析过的字段符号引用，首先将会对字段表内class_index￼项中索引的CONSTANT_Class_info符号引用进行解析，也就是字段所属的类或接口的符号引用
-
- 
-
- 
-
-如果在解析这个类或接口符号引用的过程中出现了任何异常，都会导致字段符号引用解析的失败。如果解析成功完成，那把这个字段所属的类或接口用C表示，《Java虚拟机规范》要求按照如下步骤对C进行后续字段的搜索：
-
- 
-
- 
-
-1）如果C本身就包含了简单名称和字段描述符都与目标相匹配的字段，则返回这个字段的直接引用，查找结束。 2）否则，如果在C中实现了接口，将会按照继承关系从下往上递归搜索各个接口和它的父接口，如果接口中包含了简单名称和字段描述符都与目标相匹配的字段，则返回这个字段的直接引用，查找结束。 3）否则，如果C不是java.lang.Object的话，将会按照继承关系从下往上递归搜索其父类，如果在父类中包含了简单名称和字段描述符都与目标相匹配的字段，则返回这个字段的直接引用，查找结束。 4）否则，查找失败，抛出java.lang.NoSuchFieldError异常。
-
- 
-
- 
-
-如果查找过程成功返回了引用，将会对这个字段进行权限验证，如果发现不具备对字段的访问权限，将抛出java.lang.IllegalAccessError异常。
-
- 
-
- 
-
-以上解析规则能够确保Java虚拟机获得字段唯一的解析结果，但在实际情况中，Javac编译器往往会采取比上述规范更加严格一些的约束，譬如有一个同名字段同时出现在某个类的接口和父类当中，或者同时在自己或父类的多个接口中出现，按照解析规则仍是可以确定唯一的访问字段，但Javac编译器就可能直接拒绝其编译为Class文件。
-
- 
-
- 
-
-3.方法解析
-
- 
-
- 
-
-方法解析的第一个步骤与字段解析一样，也是需要先解析出方法表的class_index￼项中索引的方法所属的类或接口的符号引用，如果解析成功，那么我们依然用C表示这个类，接下来虚拟机将会按照如下步骤进行后续的方法搜索：
-
- 
-
- 
-
-1）由于Class文件格式中类的方法和接口的方法符号引用的常量类型定义是分
-
- 
-
- 
-
-开的，如果在类的方法表中发现class_index中索引的C是个接口的话，那就直接抛出java.lang.IncompatibleClassChangeError异常。 2）如果通过了第一步，在类C中查找是否有简单名称和描述符都与目标相匹配的方法，如果有则返回这个方法的直接引用，查找结束。 3）否则，在类C的父类中递归查找是否有简单名称和描述符都与目标相匹配的方法，如果有则返回这个方法的直接引用，查找结束。 4）否则，在类C实现的接口列表及它们的父接口之中递归查找是否有简单名称和描述符都与目标相匹配的方法，如果存在匹配的方法，说明类C是一个抽象类，这时候查找结束，抛出java.lang.AbstractMethodError异常。 5）否则，宣告方法查找失败，抛出java.lan
-
-深入理解Java虚拟机：JVM高级特性与最佳实践（第3版）
-
-周志明
-
-5个笔记
-
-7.3 类加载的过程
-
- 
-
-最后，如果查找过程成功返回了直接引用，将会对这个方法进行权限验证，如果发现不具备对此方法的访问权限，将抛出java.lang.IllegalAccessError异常。
-
- 
-
- 
-
-4.接口方法解析
-
- 
-
- 
-
-接口方法也是需要先解析出接口方法表的class_index￼项中索引的方法所属的类或接口的符号引用，如果解析成功，依然用C表示这个接口，接下来虚拟机将会按照如下步骤进行后续的接口方法搜索： 1）与类的方法解析相反，如果在接口方法表中发现class_index中的索引C是个类而不是接口，那么就直接抛出java.lang.IncompatibleClassChangeError异常。 2）否则，在接口C中查找是否有简单名称和描述符都与目标相匹配的方法，如果有则返回这个方法的直接引用，查找结束。 3）否则，在接口C的父接口中递归查找，直到java.lang.Object类（接口方法的查找范围也会包括Object类中的方法）为止，看是否有简单名称和描述符都与目标相匹配的方法，如果有则返回这个方法的直接引用，查找结束。 4）对于规则3，由于Java的接口允许多重继承，如果C的不同父接口中存有多
-
- 
-
- 
-
-个简单名称和描述符都与目标相匹配的方法，那将会从这多个方法中返回其中一个并结束查找，《Java虚拟机规范》中并没有进一步规则约束应该返回哪一个接口方法。但与之前字段查找类似地，不同发行商实现的Javac编译器有可能会按照更严格的约束拒绝编译这种代码来避免不确定性。 5）否则，宣告方法查找失败，抛出java.lang.NoSuchMethodError异常。
-
- 
-
- 
-
-在JDK 9之前，Java接口中的所有方法都默认是public的，也没有模块化的访问约束，所以不存在访问权限的问题，接口方法的符号解析就不可能抛出java.lang.IllegalAccessError异常。但在JDK 9中增加了接口的静态私有方法，也有了模块化的访问约束，所以从JDK 9起，接口方法的访问也完全有可能因访问权限控制而出现java.lang.IllegalAccessError异常。
-
-微信读书
+　　在 JDK 9 之前，Java 接口中的所有方法都默认是 public 的，也没有模块化的访问约束，所以不存在访问权限的问题，接口方法的符号解析就不可能抛出 java.lang.IllegalAccessError 异常。但在 JDK 9 中增加了接口的静态私有方法，也有了模块化的访问约束，所以从 JDK 9 起，接口方法的访问也完全有可能因访问权限控制而出现 java.lang.IllegalAccessError 异常。
 
 ### 7.3.5 初始化
 
- 
+　　类的初始化阶段是类加载过程的最后一个步骤，之前介绍的几个类加载的动作里，除了在加载阶段用户应用程序可以通过自定义类加载器的方式局部参与外，其余动作都完全由 Java 虚拟机来主导控制。直到初始化阶段，Java 虚拟机才真正开始执行类中编写的 Java 程序代码，将主导权移交给应用程序。
 
-类的初始化阶段是类加载过程的最后一个步骤，之前介绍的几个类加载的动作里，除了在加载阶段用户应用程序可以通过自定义类加载器的方式局部参与外，其余动作都完全由Java虚拟机来主导控制。直到初始化阶段，Java虚拟机才真正开始执行类中编写的Java程序代码，将主导权移交给应用程序。
+　　进行准备阶段时，变量已经赋过一次系统要求的初始零值，而在初始化阶段，则会根据程序员通过程序编码制定的主观计划去初始化类变量和其他资源。
 
- 
+　　初始化阶段就是执行类构造器 < clinit >() 方法的过程。< clinit >() 并不是程序员在 Java 代码中直接编写的方法，它是 Javac 编译器的自动生成物。
 
- 
+　　< clinit >() 方法具体时如何产生的，以及 < clinit >() 方法执行过程中的细节：
 
-进行准备阶段时，变量已经赋过一次系统要求的初始零值，而在初始化阶段，则会根据程序员通过程序编码制定的主观计划去初始化类变量和其他资源。
-
- 
-
- 
-
-初始化阶段就是执行类构造器()方法的过程。()并不是程序员在Java代码中直接编写的方法，它是Javac编译器的自动生成物
-
- 
-
- 
-
-·()方法是由编译器自动收集类中的所有类变量的赋值动作和静态语句块（static{}块）中的语句合并产生的，编译器收集的顺序是由语句在源文件中出现的顺序决定的，静态语句块中只能访问到定义在静态语句块之前的变量，定义在它之后的变量，在前面的静态语句块可以赋值，但是不能访问，如代码清单7-5所示。 代码清单7-5 非法前向引用变量 public class Test {￼  static {￼  i = 0; // 给变量复制可以正常编译通过￼  System.out.print(i); // 这句编译器会提示“非法向前引用”￼  }￼  static int i = 1;￼ }
-
- 
-
- 
-
-()方法与类的构造函数（即在虚拟机视角中的实例构造器()方法）不同，它不需要显式地调用父类构造器，Java虚拟机会保证在子类的()方法执行前，父类的()方法已经执行完毕。因此在Java虚拟机中第一个被执行的()方法的类型肯定是java.lang.Object。
-
- 
-
- 
-
-由于父类的()方法先执行，也就意味着父类中定义的静态语句块要优先于子类的变量赋值操作
-
- 
-
- 
-
-()方法对于类或接口来说并不是必需的，如果一个类中没有静态语句块，也没有对变量的赋值操作，那么编译器可以不为这个类生成()方法。
-
- 
-
- 
-
-·接口中不能使用静态语句块，但仍然有变量初始化的赋值操作，因此接口与类一样都会生成()方法。但接口与类不同的是，执行接口的()方法不需要先执行父接口的()方法，因为只有当父接口中定义的变量被使用时，父接口才会被初始化。此外，接口的实现类在初始化时也一样不会执行接口的()方法。
-
- 
-
- 
-
-Java虚拟机必须保证一个类的()方法在多线程环境中被正确地加锁同步，如果多个线程同时去初始化一个类，那么只会有其中一个线程去执行这个类的()方法，其他线程都需要阻塞等待，直到活动线程执行完毕()方法。如果在一个类的()方法中有耗时很长的操作，那就可能造成多个进程阻塞￼，在实际应用中这种阻塞往往是很隐蔽的
-
-微信读书
+* < clinit >() 方法是由编译器自动收集类中的所有类变量的赋值动作和静态语句块（ static{} 块）中的语句合并产生的，编译器收集的顺序是由语句在源文件中出现的顺序决定的，静态语句块中只能访问到定义在静态语句块之前的变量，定义在它之后的变量，在前面的静态语句块可以赋值，但是不能访问。
+* < clinit >() 方法与类的构造函数（即在虚拟机视角中的实例构造器< init >() 方法）不同，它不需要显式地调用父类构造器，Java虚拟机会保证在子类的 < clinit >() 方法执行前，父类的 < clinit >() 方法已经执行完毕。因此在 Java 虚拟机中第一个被执行的 < clinit >() 方法的类型肯定是java.lang.Object。
+* 由于父类的 < clinit >() 方法先执行，也就意味着父类中定义的静态语句块要优先于子类的变量赋值操作。
+* < clinit >() 方法对于类或接口来说并不是必需的，如果一个类中没有静态语句块，也没有对变量的赋值操作，那么编译器可以不为这个类生成 < clinit >() 方法。
+* 接口中不能使用静态语句块，但仍然有变量初始化的赋值操作，因此接口与类一样都会生成< clinit >() 方法。但接口与类不同的是，执行接口的 < clinit >() 方法不需要先执行父接口的 < clinit >() 方法，因为只有当父接口中定义的变量被使用时，父接口才会被初始化。此外，接口的实现类在初始化时也一样不会执行接口的 < clinit >() 方法。
+* Java 虚拟机必须保证一个类的 < clinit >() 方法在多线程环境中被正确地加锁同步，如果多个线程同时去初始化一个类，那么只会有其中一个线程去执行这个类的 < clinit >() 方法，其他线程都需要阻塞等待，直到活动线程执行完毕 < clinit >() 方法。如果在一个类的 < clinit >() 方法中有耗时很长的操作，那就可能造成多个进程阻塞￼，在实际应用中这种阻塞往往是很隐蔽的。
 
 ## 7.4 类加载器
 
-深入理解Java虚拟机：JVM高级特性与最佳实践（第3版）
-
-周志明
-
-30个笔记
-
-7.4 类加载器
-
- 
-
-把类加载阶段中的“通过一个类的全限定名来获取描述该类的二进制字节流”这个动作放到Java虚拟机外部去实现，以便让应用程序自己决定如何去获取所需的类。实现这个动作的代码被称为“类加载器”（Class Loader）。
-
- 
-
- 
+　　把类加载阶段中的 “ 通过一个类的全限定名来获取描述该类的二进制字节流 ” 这个动作放到 Java 虚拟机外部去实现，以便让应用程序自己决定如何去获取所需的类。实现这个动作的代码被称为 “ **类加载器** ”（Class Loader）。
 
 ### 7.4.1 类与类加载器
 
- 
+　　类加载器只用于实现类的加载动作。
 
- 
+　　对于任意一个类，都必须由加载它的类加载器和这个类本身一起共同确立其在 Java 虚拟机中的唯一性，每一个类加载器，都拥有一个独立的类名称空间。这句话可以表达得更通俗一些：比较两个类是否 “ 相等 ” ，只有在这两个类是由同一个类加载器加载的前提下才有意义，否则，即使这两个类来源于同一个 Class 文件，被同一个 Java 虚拟机加载，只要加载它们的类加载器不同，那这两个类就必定不相等。
 
-类加载器虽然只用于实现类的加载动作
-
- 
-
- 
-
-对于任意一个类，都必须由加载它的类加载器和这个类本身一起共同确立其在Java虚拟机中的唯一性，每一个类加载器，都拥有一个独立的类名称空间。这句话可以表达得更通俗一些：比较两个类是否“相等”，只有在这两个类是由同一个类加载器加载的前提下才有意义，否则，即使这两个类来源于同一个Class文件，被同一个Java虚拟机加载，只要加载它们的类加载器不同，那这两个类就必定不相等。
-
- 
-
- 
-
-“相等”，包括代表类的Class对象的equals()方法、
-
- 
-
- 
-
-isAssignableFrom()方法、isInstance()方法的返回结果，也包括了使用instanceof关键字做对象所属关系判定等各种情况
-
- 
-
- 
+　　类的 “ 相等 ”，包括代表类的 Class 对象的equals() 方法、isAssignableFrom() 方法、isInstance() 方法的返回结果，也包括了使用 instanceof 关键字做对象所属关系判定等各种情况。 
 
 ### 7.4.2 双亲委派模型
 
+　　站在 Java 虚拟机的角度来看，只存在两种不同的类加载器：一种是**启动类加载器**（Bootstrap ClassLoader），这个类加载器使用 C++ 语言实现￼，是虚拟机自身的一部分；另外一种就是**其他所有的类加载器**，这些类加载器都由 Java 语言实现，独立存在于虚拟机外部，并且全都继承自抽象类java.lang.ClassLoader。
 
+　　自 JDK 1.2 以来，Java一直保持着**三层类加载器**、**双亲委派**的类加载架构，尽管这套架构在 Java 模块化系统出现后有了一些调整变动，但依然未改变其主体结构。
 
- 
+　　针对 JDK 8 及之前版本的 Java 应用，绝大多数 Java 程序都会使用到以下 3 个系统提供的类加载器来进行加载：
 
- 
+* **启动类加载器**（Bootstrap Class Loader）：前面已经介绍过，这个类加载器负责加载存放在 \lib 目录，或者被 -Xbootclasspath 参数所指定的路径中存放的，而且是 Java 虚拟机能够识别的（按照文件名识别，如 rt.jar、tools.jar，名字不符合的类库即使放在 lib 目录中也不会被加载）类库加载到虚拟机的内存中。
 
-站在Java虚拟机的角度来看，只存在两种不同的类加载器：一种是启动类加载器（Bootstrap ClassLoader），这个类加载器使用C++语言实现￼，是虚拟机自身的一部分；另外一种就是其他所有的类加载器，这些类加载器都由Java语言实现，独
+  启动类加载器无法被 Java 程序直接引用，用户在编写自定义类加载器时，如果需要把加载请求委派给引导类加载器去处理，那直接使用 null 代替即可。
 
- 
+* **扩展类加载器**（Extension Class Loader）：这个类加载器是在类 sun.misc.Launcher$ExtClassLoader 中以 Java 代码的形式实现的。它负责加载 \lib\ext 目录中，或者被 java.ext.dirs 系统变量所指定的路径中所有的类库。
 
- 
+  根据 “ 扩展类加载器 ” 这个名称，就可以推断出这是一种 Java 系统类库的扩展机制，JDK 的开发团队允许用户将具有通用性的类库放置在 ext 目录里以扩展 Java SE 的功能，在 JDK 9 之后，这种扩展机制被模块化带来的天然的扩展能力所取代。由于扩展类加载器是由 Java 代码实现的，开发者可以直接在程序中使用扩展类加载器来加载 Class 文件。
 
-立存在于虚拟机外部，并且全都继承自抽象类java.lang.ClassLoader。
+* **应用程序类加载器**（Application Class Loader）：这个类加载器由 sun.misc.Launcher$AppClassLoader 来实现。由于应用程序类加载器是 ClassLoader 类中的 getSystem-ClassLoader() 方法的返回值，所以有些场合中也称它为 “ 系统类加载器 ”。
 
- 
+  它负责加载用户类路径（ClassPath）上所有的类库，开发者同样可以直接在代码中使用这个类加载器。如果应用程序中没有自定义过自己的类加载器，一般情况下这个就是程序中默认的类加载器。
 
- 
+　　JDK 9 之前的 Java 应用都是由这三种类加载器互相配合来完成加载的，如果用户认为有必要，还可以加入自定义的类加载器来进行拓展，典型的如增加除了磁盘位置之外的 Class 文件来源，或者通过类加载器实现类的隔离、重载等功能。
 
-自JDK 1.2以来，Java一直保持着三层类加载器、双亲委派的类加载架构，尽管这套架构在Java模块化系统出现后有了一些调整变动，但依然未改变其主体结构
+　　这些类加载器之间的协作关系 “ 通常 ” 会如下图所示：
 
- 
-
- 
-
-针对JDK 8及之前版本的Java来
+![](image/类加载器双亲委派模型.jpeg)
 
  
 
  
 
-对于这个时期的Java应用，绝大多数Java程序都会使用到以下3个系统提供的类加载器来进行加载。
+　　上图中展示的各种类加载器之间的层次关系被称为类加载器的 “**双亲委派模型**（Parents Delegation Model）”。
 
- 
+　　双亲委派模型要求除了顶层的启动类加载器外，其余的类加载器都应有自己的父类加载器。不过这里类加载器之间的父子关系一般不是以继承（Inheritance）的关系来实现的，而是通常使用组合（Composition）关系来复用父加载器的代码。
 
- 
+　　类加载器的双亲委派模型在 JDK 1.2 时期被引入，并被广泛应用于此后几乎所有的 Java 程序中，但它并不是一个具有强制性约束力的模型，而是 Java 设计者们推荐给开发者的一种类加载器实现的最佳实践。
 
-启动类加载器（Bootstrap Class Loader）：前面已经介绍过，这个类加载器负责加载存放在\lib目录，或者被-Xbootclasspath参数所指定的路径中存放的，而且是Java虚拟机能够识别的（按照文件名识别，如rt.jar、tools.jar，名字不符合的类库即使放在lib目录中也不会被加载）类库加载到虚拟机的内存中。启动类加载器无法被Java程序直接引用，用户在编写自定义类加载器时，如果需要把加载请求委派给引导类加载器去处理，那直接使用null代替即可
+　　**双亲委派模型的工作过程**是：如果一个类加载器收到了类加载的请求，它首先不会自己去尝试加载这个类，而是把这个请求委派给父类加载器去完成，每一个层次的类加载器都是如此，因此所有的加载请求最终都应该传送到最顶层的启动类加载器中，只有当父加载器反馈自己无法完成这个加载请求（它的搜索范围中没有找到所需的类）时，子加载器才会尝试自己去完成加载。
 
- 
-
- 
-
-·扩展类加载器（Extension Class Loader）：这个类加载器是在类sun.misc.Launcher$ExtClassLoader中以Java代码的形式实现的。它负责加载\lib\ext目录中，或者被java.ext.dirs系统变量所指定的路径中所有的类库。根据“扩展类加载器”这个名称，就可以推断出这是一种Java系统类库的扩展机制，JDK的开发团队允许用户将具有通用性的类库放置在ext目录里以扩展Java SE的功能，在JDK 9之后，这种扩展机制被模块化带来的天然的扩展能力所取代。由于扩展类加载器是由Java代码实现的，开发者可以直接在程序中使用扩展类加载器来加载Class文件。
-
- 
-
- 
-
-·应用程序类加载器（Application Class Loader）：这个类加载器由sun.misc.Launcher$AppClassLoader来实现。由于应用程序类加载器是ClassLoader类中的getSystem-ClassLoader()方法的返回值，所以有些场合中也称它为“系统类加载器”。它负责加载用户类路径（ClassPath）上所有的类库，开发者同样可以直接在代码中使用这个类加载器。如果应用程序中没有自定义过自己的类加载器，一般情况下这个就是程序中默认的类加载器。
-
- 
-
- 
-
-JDK 9之前的Java应用都是由这三种类加载器互相配合来完成加载的，如果用户认为有必要，还可以加入自定义的类加载器来进行拓展，典型的如增加除了磁盘位置之外的Class文件来源，或者通过类加载器实现类的隔离、重载等功能。这些类加载器之间的协作关系“通常”会如图7-2所示。
-
- 
-
- 
-
-图7-2中展示的各种类加载器之间的层次关系被称为类加载器的“双亲委派模型（Parents Delegation Model）”
-
- 
-
- 
-
-双亲委派模型要求除了顶层的启动类加载器外，其余的类加载器都应有自己的父类加载器。不过这里类加载器之间的父子关系一般不是以继承（Inheritance）的关系来实现的，而是通常使用组合（Composition）关系来复用父加载器的代码。
-
- 
-
- 
-
-类加载器的双亲委派模型在JDK 1.2时期被引入，并被广泛应用于此后几乎所有的Java程序中，但它并不是一个具有强制性约束力的模型，而是Java设计者们推荐给开发者的一种类加载器实现的最佳实践。
-
- 
-
- 
-
-双亲委派模型的工作过程是：如果一个类加载器收到了类加载的请求，它首先不会自己去尝试加载这个类，而是把这个请求委派给父类加载器去完成，每一个层次的类加载器都是如此，因此所有的加载请求最终都应该传送到最顶层的启动类加载器中，只有当父加载器反馈自己无法完成这个加载请求（它的搜索范围中没有找到所需的类）时，子加载器才会尝试自己去完成加载。
-
- 
-
- 
-
-使用双亲委派模型来组织类加载器之间的关系，一个显而易见的好处就是Java中的类随着它的类加载器一起具备了一种带有优先级的层次关系
-
- 
-
- 
+　　使用双亲委派模型来组织类加载器之间的关系，一个显而易见的好处就是 Java 中的类随着它的类加载器一起具备了一种带有优先级的层次关系。
 
 ### 7.4.3 破坏双亲委派模型
 
+　　直到 Java 模块化出现为止，双亲委派模型主要出现过 3 次较大规模“被破坏”的情况。
 
+1.  第一次破坏
 
- 
+   双亲委派模型的第一次 “ 被破坏 ” 发生在双亲委派模型出现之前——即 JDK 1.2 之前。
 
- 
+   由于双亲委派模型在 JDK 1.2 之后才被引入，但是类加载器的概念和抽象类 java.lang.ClassLoader 则在 Java 的第一个版本中就已经存在，面对已经存在的用户自定义类加载器的代码，Java 设计者们引入双亲委派模型时不得不做出一些妥协，为了兼容这些已有代码，无法再以技术手段避免 loadClass() 被子类覆盖的可能性，只能在 JDK 1.2 之后的 java.lang.ClassLoader 中添加一个新的 protected 方法 findClass() ，并引导用户编写的类加载逻辑时尽可能去重写这个方法，而不是在 loadClass() 中编写代码。
 
-直到Java模块化出现为止，双亲委派模型主要出现过3次较大规模“被破坏”的情况。
+2.  第二次破坏
 
- 
+   双亲委派模型的第二次 “ 被破坏 ” 是由这个模型自身的缺陷导致的。
 
- 
+   双亲委派很好地解决了各个类加载器协作时基础类型的一致性问题（ 越基础的类由越上层的加载器进行加载 ），基础类型之所以被称为 “ 基础 ”，是因为它们总是作为被用户代码继承、调用的 API 存在，但如果有基础类型又要调用回用户的代码，该怎么办？
 
-双亲委派模型的第一次“被破坏”其实发生在双亲委派模型出现之前——即JDK 1.2面世以前的“远古”时代。由于双亲委派模型在JDK 1.2之后才被引入，但是类加载器的概念和抽象类java.lang.ClassLoader则在Java的第一个版本中就已经存在，面对已经存在的用户自定义类加载器的代码，Java设计者们引入双亲委派模型时不得不做出一些妥协，为了兼容这些已有代码，无法再以技术手段避免loadClass()被子类覆盖的可能性，只能在JDK 1.2之后的java.lang.ClassLoader中添加一个新的protected方法findClass()，并引导用户编写的类加载逻辑时尽可能去重写这个方法，而不是在loadClass()中编写代码
+   对于有基础类型又要调用回用户代码典型的例子便是 JNDI 服务，JNDI 现在已经是 Java 的标准服务，它的代码由启动类加载器来完成加载（在 JDK 1.3 时加入到 rt.jar 的），肯定属于 Java 中很基础的类型了。但 JNDI 存在的目的就是对资源进行查找和集中管理，它需要调用由其他厂商实现并部署在应用程序的 ClassPath 下的 JNDI 服务提供者接口（Service Provider Interface，SPI）的代码，那么问题是：启动类加载器是绝不可能认识、加载这些代码的，那该怎么办？
 
- 
+   为了解决这个困境，Java 的设计团队只好引入了一个不太优雅的设计：线程上下文类加载器（Thread Context ClassLoader）。这个类加载器可以通过 java.lang.Thread 类的 setContext-ClassLoader() 方法进行设置，如果创建线程时还未设置，它将会从父线程中继承一个，如果在应用程序的全局范围内都没有设置过的话，那这个类加载器默认就是应用程序类加载器。
 
- 
+3. 第三次破坏
 
-双亲委派模型的第二次“被破坏”是由这个模型自身的缺陷导致的，双亲委派很好地解决了各个类加载器协作时基础类型的一致性问题（越基础的类由越上层的加载器进行加载），基础类型之所以被称为“基础”，是因为它们总是作为被用户代码继承、调用的API存在，但程序设计往往没有绝对不变的完美规则，如果有基础类型又要调用回用户的代码，那该怎么办呢？
+   双亲委派模型的第三次 “ 被破坏 ” 是由于用户对程序动态性的追求而导致的，这里所说的 “ 动态性 ” 指的是：代码热替换（Hot Swap）、模块热部署（Hot Deployment）等。
 
- 
+   OSGi 实现模块化热部署的关键是它自定义的类加载器机制的实现，每一个程序模块（ OSGi 中称为 Bundle ）都有一个自己的类加载器，当需要更换一个 Bundle 时，就把 Bundle 连同类加载器一起换掉以实现代码的热替换。
 
- 
+   在 OSGi 环境下，类加载器不再双亲委派模型推荐的树状结构，而是进一步发展为更加复杂的网状结构，当收到类加载请求时，OSGi 将按照下面的顺序进行类搜索：
 
-这并非是不可能出现的事情，一个典型的例子便是JNDI服务，JNDI现在已经是Java的标准服务，它的代码由启动类加载器来完成加载（在JDK 1.3时加入到rt.jar的），肯定属于Java中很基础的类型了。但JNDI存在的目的就是对资源进行查找和集中管理，它需要调用由其他厂商实现并部署在应用程序的ClassPath下的JNDI服务提供者接口（Service Provider Interface，SPI）的代码，现在问题来了，启动类加载器是绝不可能认识、加载这些代码的，那该怎么办？
+   * 1）将以 java.* 开头的类，委派给父类加载器加载。
 
- 
+   * 2）否则，将委派列表名单内的类，委派给父类加载器加载。
 
- 
+   * 3）否则，将 Import 列表中的类，委派给 Export 这个类的 Bundle 的类加载器加载。
 
-为了解决这个困境，Java的设计团
+   * 4）否则，查找当前 Bundle 的 ClassPath，使用自己的类加载器加载。
 
- 
+   * 5）否则，查找类是否在自己的 Fragment Bundle 中，如果在，则委派给 Fragment Bundle 的类加载器加载。
 
- 
+   * 6）否则，查找 Dynamic Import 列表的 Bundle ，委派给对应 Bundle 的类加载器加载。
 
-队只好引入了一个不太优雅的设计：线程上下文类加载器（Thread Context ClassLoader）。这个类加载器可以通过java.lang.Thread类的setContext-ClassLoader()方法进行设置，如果创建线程时还未设置，它将会从父线程中继承一个，如果在应用程序的全局范围内都没有设置过的话，那这个类加载器默认就是应用程序类加载器。
+   * 7）否则，类查找失败。
 
- 
-
- 
-
-双亲委派模型的第三次“被破坏”是由于用户对程序动态性的追求而导致的，这里所说的“动态性”指的是一些非常“热”门的名词：代码热替换（Hot Swap）、模块热部署（Hot Deployment）等。
-
- 
-
- 
-
-OSGi实现模块化热部署的关键是它自定义的类加载器机制的实现，每一个程序模块（OSGi中称为Bundle）都有一个自己的类加载器，当需要更换一个Bundle时，就把Bundle连同类加载器一起换掉以实现代码的热替换。在OSGi环境下，类加载器不再双亲委派模型推荐的树状结构，而是进一步发展为更加复杂的网状结构，当收到类加载请求时，OSGi将按照下面的顺序进行类搜索：1）将以java.*开头的类，委派给父类加载器加载。2）否则，将委派列表名单内的类，委派给父类加载器加载。3）否则，将Import列表中的类，委派给Export这个类的Bundle的类加载器加载。4）否则，查找当前Bundle的ClassPath，使用自己的类加载器加载。5）否则，查找类是否在自己的Fragment Bundle中，如果在，则委派给Fragment Bundle的类加载器加载。6）否则，查找Dynamic Import列表的Bundle，委派给对应Bundle的类加载器加载。7）否则，类查找失败。上面的查找顺序中只有开头两点仍然符合双亲委派模型的原则，其余的类查找都是在平级的类加载器中进行的
-
-微信读书
+     上面的查找顺序中只有开头两点仍然符合双亲委派模型的原则，其余的类查找都是在平级的类加载器中进行的。
 
 ## 7.5 Java 模块化系统
 
- 
+　　在 JDK 9 中引入的 Java 模块化系统（Java Platform Module System，JPMS）是对 Java 技术的一次重要升级，为了能够实现模块化的关键目标——可配置的封装隔离机制，JDK 9 的模块不仅仅像之前的 JAR 包那样只是简单地充当代码的容器，除了代码外，Java 的模块定义还包含以下内容：
 
-在JDK 9中引入的Java模块化系统（Java Platform Module System，JPMS）是对Java技术的一次重要升级，为了能够实现模块化的关键目标——可配置的封装隔离机制
+* 依赖其他模块的列表。
+* 导出的包列表，即其他模块可以使用的列表。
+* 开放的包列表，即其他模块可反射。
+* 访问模块的列表。
+* 使用的服务列表。
+* 提供服务的实现列表。
 
- 
+　　可配置的封装隔离机制首先要解决 JDK 9 之前基于类路径（ClassPath）来查找依赖的可靠性问题。此前，如果类路径中缺失了运行时依赖的类型，那就只能等程序运行到发生该类型的加载、链接时才会报出运行的异常。而在 JDK 9 以后，如果启用了模块化进行封装，模块就可以声明对其他模块的显式依赖，这样 Java 虚拟机就能够在启动时验证应用程序开发阶段设定好的依赖关系在运行期是否完备，如有缺失那就直接启动失败，从而避免了很大一部分由于类型依赖而引发的运行时异常。
 
- 
-
-JDK 9的模块不仅仅像之前的JAR包那样只是简单地充当代码的容器，除了代码外，Java的模块定义还包含以下内容：·依赖其他模块的列表。·导出的包列表，即其他模块可以使用的列表。·开放的包列表，即其他模块可反射
-
- 
-
- 
-
-访问模块的列表。·使用的服务列表。·提供服务的实现列表。
-
- 
-
- 
-
-可配置的封装隔离机制首先要解决JDK 9之前基于类路径（ClassPath）来查找依赖的可靠性问题。此前，如果类路径中缺失了运行时依赖的类型，那就只能等程序运行到发生该类型的加载、链接时才会报出运行的异常。而在JDK 9以后，如果启用了模块化进行封装，模块就可以声明对其他模块的显式依赖，这样Java虚拟机就能够在启动时验证应用程序开发阶段设定好的依赖关系在运行期是否完备，如有缺失那就直接启动失败，从而避免了很大一部分[插图]由于类型依赖而引发的运行时异常。
-
- 
-
- 
-
-可配置的封装隔离机制还解决了原来类路径上跨JAR文件的public类型的
-
- 
-
- 
-
-可访问性问题。JDK 9中的public类型不再意味着程序的所有地方的代码都可以随意访问到它们，模块提供了更精细的可访问性控制，必须明确声明其中哪一些public的类型可以被其他哪一些模块访问，这种访问控制也主要是在类加载过程中完成的
-
- 
-
- 
+　　可配置的封装隔离机制还解决了原来类路径上跨 JAR 文件的 public 类型的可访问性问题。JDK 9中的 public 类型不再意味着程序的所有地方的代码都可以随意访问到它们，模块提供了更精细的可访问性控制，必须明确声明其中哪一些 public 的类型可以被其他哪一些模块访问，这种访问控制也主要是在类加载过程中完成的。
 
 ### 7.5.1 模块的兼容性
 
+　　为了使可配置的封装隔离机制能够兼容传统的类路径查找机制，JDK 9 提出了与 “ 类路径 ”（ClassPath）相对应的 “ 模块路径 ”（ModulePath）的概念。简单来说，就是某个类库到底是模块还是传统的 JAR 包，只取决于它存放在哪种路径上。
 
+　　模块化系统将按照以下规则来保证使用传统类路径依赖的 Java 程序可以不经修改地直接运行在 JDK 9 及以后的 Java 版本上，即使这些版本的 JDK 已经使用模块来封装了 Java SE 的标准类库，模块化系统的这套规则也仍然保证了传统程序可以访问到所有标准类库模块中导出的包。
 
- 
+* JAR 文件在类路径的访问规则：所有类路径下的 JAR 文件及其他资源文件，都被视为自动打包在一个匿名模块（Unnamed Module）里，这个匿名模块几乎是没有任何隔离的，它可以看到和使用类路径上所有的包、JDK 系统模块中所有的导出包，以及模块路径上所有模块中导出的包。
+* 模块在模块路径的访问规则：模块路径下的具名模块（Named Module）只能访问到它依赖定义中列明依赖的模块和包，匿名模块里所有的内容对具名模块来说都是不可见的，即具名模块看不见传统 JAR 包的内容。
+* JAR 文件在模块路径的访问规则：如果把一个传统的、不包含模块定义的 JAR 文件放置到模块路径中，它就会变成一个自动模块（Automatic Module）。尽管不包含 module-info.class，但自动模块将默认依赖于整个模块路径中的所有模块，因此可以访问到所有模块导出的包，自动模块也默认导出自己所有的包。
 
- 
+　　以上 3 条规则保证了即使 Java 应用依然使用传统的类路径，升级到 JDK 9 对应用来说几乎（类加载器上的变动还是可能会导致少许可见的影响）不会有任何感觉，项目也不需要专门为了升级 JDK 版本而去把传统 JAR 包升级成模块。
 
-为了使可配置的封装隔离机制能够兼容传统的类路径查找机制，JDK 9提出了与“类路径”（ClassPath）相对应的“模块路径”（ModulePath）的概念
+　　除了向后兼容性外，随着 JDK 9 模块化系统的引入，更值得关注的是它本身面临的模块间的管理和兼容性问题：如果同一个模块发行了多个不同的版本，那只能由开发者在编译打包时人工选择好正确版本的模块来保证依赖的正确性。
 
- 
+　　Java 模块化系统目前不支持在模块定义中加入版本号来管理和约束依赖，本身也不支持多版本号的概念和版本选择功能。
 
- 
+　　模块版本应是编译、加载、运行期间都可以使用的。
 
-简单来说，就是某个类库到底是模块还是传统的JAR包，只取决于它存放在哪种路径上
-
- 
-
- 
-
-模块化系统将按照以下规则来保证使用传统类路径依赖的Java程序可以不经修改地直接运行在JDK 9及以后的Java版本上，即使这些版本的JDK已经使用模块来封装了Java SE的标准类库，模块化系统的这套规则也仍然保证了传统程序可以访问到所有标准类库模块中导出的包。
-
- 
-
- 
-
-·JAR文件在类路径的访问规则：所有类路径下的JAR文件及其他资源文
-
- 
-
- 
-
-件，都被视为自动打包在一个匿名模块（Unnamed Module）里，这个匿名模块几乎是没有任何隔离的，它可以看到和使用类路径上所有的包、JDK系统模块中所有的导出包，以及模块路径上所有模块中导出的包。·模块在模块路径的访问规则：模块路径下的具名模块（Named Module）只能访问到它依赖定义中列明依赖的模块和包，匿名模块里所有的内容对具名模块来说都是不可见的，即具名模块看不见传统JAR包的内容。
-
- 
-
- 
-
-JAR文件在模块路径的访问规则：如果把一个传统的、不包含模块定义的JAR文件放置到模块路径中，它就会变成一个自动模块（Automatic Module）。尽管不包含module-info.class，但自动模块将默认依赖于
-
- 
-
- 
-
-整个模块路径中的所有模块，因此可以访问到所有模块导出的包，自动模块也默认导出自己所有的包。
-
- 
-
- 
-
-以上3条规则保证了即使Java应用依然使用传统的类路径，升级到JDK 9对应用来说几乎（类加载器上的变动还是可能会导致少许可见的影响，将在下节介绍）不会有任何感觉，项目也不需要专门为了升级JDK版本而去把传统JAR包升级成模块。
-
- 
-
- 
-
-除了向后兼容性外，随着JDK 9模块化系统的引入，更值得关注的是它本身面临的模块间的管理和兼容性问题：如果同一个模块发行了多个不同的版本，那只能由开发者在编译打包时人工选择好正确版本的模块来保证依赖的正确性
-
- 
-
- 
-
-Java模块化系统目前不支持在模块定义中加入版本号来管理和约束依
-
- 
-
- 
-
-赖，本身也不支持多版本号的概念和版本选择功能
-
- 
-
- 
-
-模块版本应是编译、加载、运行期间都可以使用的。
-
- 
-
- 
-
-在JDK 9时加入Class文件格式的
-
- 
-
- 
-
-Module属性，里面有module_version_index这样的字段，用户可以在编译时使用“javac--module-version”来指定模块版本，在Java类库API中也存在java.lang.module.ModuleDescriptor.Version这样的接口可以在运行时获取到模块的版本号。
-
- 
-
- 
+　　在 JDK 9 时加入 Class 文件格式的 Module 属性，里面有 module_version_index 这样的字段，用户可以在编译时使用 “javac--module-version” 来指定模块版本，在 Java 类库 API 中也存在 java.lang.module.ModuleDescriptor.Version 这样的接口可以在运行时获取到模块的版本号。
 
 ### 7.5.2 模块化下的类加载器
 
+　　为了保证兼容性，JDK 9 并没有从根本上动摇从 JDK 1.2 以来运行的三层类加载器架构以及双亲委派模型。但是为了模块化系统的顺利施行，模块化下的类加载器仍然发生了一些应该被注意到变动，主要包括以下几个方面：
 
+1. 首先，是扩展类加载器（Extension Class Loader）被平台类加载器（Platform Class Loader）取代。
 
- 
+2. 其次，平台类加载器和应用程序类加载器都不再派生自 java.net.URLClassLoader ，如果有程序直接依赖了这种继承关系，或者依赖了 URLClassLoader 类的特定方法，那代码很可能会在 JDK 9 及更高版本的 JDK 中崩溃。
 
- 
+   现在启动类加载器、平台类加载器、应用程序类加载器全都继承于 jdk.internal.loader.BuiltinClassLoader，在 BuiltinClassLoader 中实现了新的模块化架构下类如何从模块中加载的逻辑，以及模块中资源可访问性的处理。
 
-为了保证兼容性，JDK 9并没有从根本上动摇从JDK 1.2以来运行了二十年之久的三层类加载器架构以及双亲委派模型。但是为了模块化系统的顺利施行，模块化下的类加载器仍然发生了一些应该被注意到变动，主要包括以下几个方面。
+3. 最后，JDK 9 中虽然仍然维持着三层类加载器和双亲委派的架构，但类加载的委派关系也发生了变动。
 
- 
+   当平台及应用程序类加载器收到类加载请求，在委派给父加载器加载前，要先判断该类是否能够归属到某一个系统模块中，如果可以找到这样的归属关系，就要优先委派给负责那个模块的加载器完成加载，也许这可以算是对双亲委派的第四次破坏。
 
- 
+　　在 JDK 9 以后的三层类加载器的架构如下图所示：
 
-首先，是扩展类加载器（Extension Class Loader）被平台类加载器（Platform Class Loader）取代。
-
- 
-
- 
-
-其次，平台类加载器和应用程序类加载器都不再派生自java.net.URLClassLoader，如果有程序直接依赖了这种继承关系，或者依赖了URLClassLoader类的特定方法，那代码很可能会在JDK 9及更高版本的JDK中崩溃。
+![](image/JDK9后的类加载器委派关系.jpeg)
 
  
 
- 
+　　在 Java 模块化系统明确规定了三个类加载器负责各自加载的模块，即前面所说的归属关系，如下所示。
 
-现在启动类加载器、平台类加载器、应用程序类加载器全都继承于jdk.inter
+* 启动类加载器负责加载的模块：
 
- 
+  ```java
+  java.base 
+  java.security.sasl
+  java.datatransfer 
+  java.xml
+  java.desktop 
+  jdk.httpserver
+  java.instrument 
+  jdk.internal.vm.ci
+  java.logging 
+  jdk.management
+  java.management 
+  jdk.management.agent
+  java.management.rmi 
+  jdk.naming.rmi
+  java.naming 
+  jdk.netjava.prefs 
+  jdk.sctpjava.rmi 
+  jdk.unsupported
+  ```
 
- 
+  
 
-nal.loader.BuiltinClassLoader，在BuiltinClassLoader中实现了新的模块化架构下类如何从模块中加载的逻辑，以及模块中资源可访问性的处理。
+* 平台类加载器负责加载的模块：
 
- 
+  ```java
+  java.activation* 
+  jdk.accessibility
+  java.compiler* 
+  jdk.charsets
+  java.corba* 
+  jdk.crypto.cryptoki
+  java.scripting 
+  jdk.crypto.ecjava.se 
+  jdk.dynalink
+  java.se.ee 
+  jdk.incubator.httpclient
+  java.security.jgss 
+  jdk.internal.vm.compiler*
+  java.smartcardio 
+  jdk.jsobject
+  java.sql 
+  jdk.localedata
+  java.sql.rowset 
+  jdk.naming.dns
+  java.transaction* 
+  jdk.scripting.nashorn
+  java.xml.bind* 
+  jdk.security.auth
+  java.xml.crypto 
+  jdk.security.jgss
+  java.xml.ws* 
+  jdk.xml.dom
+  java.xml.ws.annotation* 
+  jdk.zipfs
+  ```
 
- 
+  
 
-图7-7 JDK 9后的类加载器委派关系
+* 应用程序类加载器负责加载的模块：
 
- 
-
- 
-
-最后，JDK 9中虽然仍然维持着三
-
- 
-
- 
-
-层类加载器和双亲委派的架构，但类加载的委派关系也发生了变动。当平台及应用程序类加载器收到类加载请求，在委派给父加载器加载前，要先判断该类是否能够归属到某一个系统模块中，如果可以找到这样的归属关系，就要优先委派给负责那个模块的加载器完成加载，也许这可以算是对双亲委派的第四次破坏。在JDK 9以后的三层类加载器的架构如图7-7所示，请读者对照图7-2进行比较。
-
- 
-
- 
-
-在Java模块化系统明确规定了三个类加载器负责各自加载的模块，即前面所说的归属关系，如下所示。·启动类加载器负责加载的模块：
-
- 
-
- 
-
-java.base java.security.sasljava.datatransfer java.xmljava.desktop jdk.https
-
- 
-
- 
-
-erverjava.instrument jdk.internal.vm.cijava.logging jdk.managementjava.management jdk.management.agentjava.management.rmi jdk.naming.rmijava.naming jdk.netjava.prefs jdk.sctpjava.rmi jdk.unsupported
-
- 
-
- 
-
-平台类加载器负责加载的模块：
-
- 
-
- 
-
-java.activation* jdk.accessibilityjava.compiler* jdk.charsetsjava.corba* jdk.crypto.cryptokijava.scripting jdk.crypto.ecjava.se jdk.dynalinkjava.se.ee jdk.incubator.httpclient
-
- 
-
- 
-
-java.security.jgss jdk.internal.vm.compiler*java.smartcardio jdk.jsobjectjava.sql jdk.localedatajava.sql.rowset jdk.naming.dnsjava.transaction* jdk.scripting.nashornjava.xml.bind* jdk.security.authjava.xml.crypto jdk.security.jgssjava.xml.ws* jdk.xml.domjava.xml.ws.annotation* jdk.zipfs
-
- 
-
- 
-
-应用程序类加载器负责加载的模块：
-
- 
-
- 
-
-jdk.aot jdk.jdepsjdk.attach jdk.jdijdk.compiler jdk.jdwp.agentjdk.editpad jdk.jlinkjdk.hotspot.agent jdk.jshell
-
- 
-
- 
-
-jdk.internal.ed jdk.jstatdjdk.internal.jvmstat jdk.packjdk.internal.le jdk.policytooljdk.internal.opt jdk.rmicjdk.jartool jdk.scripting.nashorn.shelljdk.javadoc jdk.xml.bind*jdk.jcmd jdk.xml.ws*jdk.jconsole
+  ```java
+  jdk.aot 
+  jdk.jdeps
+  jdk.attach 
+  jdk.jdi
+  jdk.compiler 
+  jdk.jdwp.agent
+  jdk.editpad 
+  jdk.jlink
+  jdk.hotspot.agent 
+  jdk.jshell
+  jdk.internal.ed 
+  jdk.jstatd
+  jdk.internal.jvmstat 
+  jdk.packjdk.internal.le 
+  jdk.policytool
+  jdk.internal.opt 
+  jdk.rmicjdk.jartool 
+  jdk.scripting.nashorn.shell
+  jdk.javadoc 
+  jdk.xml.bind*
+  jdk.jcmd 
+  jdk.xml.ws*
+  jdk.jconsole
+  ```
 
 ## 7.6 本章总结
 
-本章介绍了类加载过程的“加载”“验证”“准备”“解析”和“初始化”这5个阶段中虚拟机进行了哪些动作，还介绍了类加载器的工作原理及其对虚拟机的意义。
-
-
-
-
-
+　　本章介绍了类加载过程的 “ 加载 ”、“ 验证 ”、“ 准备 ”、“ 解析 ” 和 “ 初始化 ” 这 5 个阶段中虚拟机进行了哪些动作，还介绍了类加载器的工作原理及其对虚拟机的意义。 
